# lark

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  README.md  SECURITY.md
lark-rs/: ARCHITECTURE.md  BENCH.md  CLAUDE.md  COMPLIANCE_PARITY.md  Cargo.toml  GLOSSARY.md  PHASE_2_PLAN.md  README.md
lark-rs/benches/: lex_backends.rs  parse.rs  redos.rs  vs_python_lark.py  vs_python_lark.rs  wild.rs
lark-rs/docs/: BOUNTY_FINDINGS.md  BOUNTY_FINDINGS_H2.md  BOUNTY_FINDINGS_H3.md  BOUNTY_FINDINGS_H4.md  BOUNTY_FINDINGS_H5.md  BOUNTY_FINDINGS_H6.md  BOUNTY_FINDINGS_H7.md  LABELS.md  LEXER_DFA_PLAN.md  LEXER_DFA_STATUS.md  LOOKAROUND_ELIMINATION_PLAN.md  LOOKAROUND_SCOPE.md  LOOKAROUND_STRATEGY_ANALYSIS.md  PHASE_3_RECOVERY_PLAN.md  PRINCIPLES.md  STATUS.md  TERMINAL_REDUCTION_DIAGNOSIS.md
lark-rs/docs/archive/: COMPLIANCE_PARITY.md  PHASE_2_PLAN.md
lark-rs/docs/decisions/: 0000-template.md  0001-python-lark-as-oracle.md  0001-python-lark-is-the-oracle.md  0002-deterministic-work-counters-over-wall-clock.md  0002-true-lalr1-not-slr.md  0003-intern-symbols-to-ids-with-flags.md  0003-tiered-merge-autonomy.md  0004-python-re-regex-dialect.md  0005-lower-lookaround-into-the-dfa.md  0006-dfa-default-lexer-backend.md  0007-deterministic-perf-counters.md  0008-standalone-shares-one-runtime.md  0009-xfail-burndown-discipline.md  0010-lookaround-strategy-history.md  0011-parsing-is-allocation-bound.md  0012-differential-fuzzer-active-oracle.md  0013-ebnf-nullable-helper-distribution.md  0014-patternstr-vs-patternre-classification.md  0015-one-shared-treebuilder-consolidate-before-features.md  0016-tiered-merge-autonomy.md  0017-oracle-fidelity-is-for-intended-behavior.md  0018-start-sprint-orchestration.md  0019-recovered-tree-is-optional-at-premature-eof.md  0020-postlex-recovery-mirrors-resume-parse.md  0021-cyk-empty-rule-rejection-by-provenance.md  0021-differential-audit-checkpoint.md  0022-kaizen-sweep-omnibus.md  0023-sprint-ledger-durability.md  0024-cyk-empty-rule-rejection-by-provenance.md  0025-no-backward-compat-pre-users.md  0026-behaviour-scope-is-the-oracles.md  0026-behaviour-scoped-to-the-oracle.md  0027-semantic-output-builders-direction.md  0028-output-builder-public-api-shape.md  0028-recovery-action-design.md  0029-output-builder-public-api-shape.md  0030-oracle-generators-fail-loud.md  0031-good-autonomous-fix-site-verification.md  0032-closeout-files-retro-flagged-kaizen-items.md  0033-parsetree-none-root.md  (+9 more)
lark-rs/docs/notes/: 2026-06-21-product-direction-review-simd-and-semantic-output.md  2026-06-21-semantic-output-research-note.md  issue-168-interactive-parser-api-spike.md  issue-211-primer-for-product.md  issue-211-recovery-validation-memo.md  perf-spike-2026-07-01.md  performance-strategy.md  semantic-output-builder-design.md
lark-rs/docs/sprints/: 20260621-2006.md  20260621-trailing-prs-213-214.md  20260622-1100.md  20260622-2013.md  20260623-325444f.md  20260624-0fd2c76.md  20260625-ac8e5a3.md  20260627-1836.md  20260627-d337fba.md  20260627-d399eb7.md  20260627-d70b33d.md  20260630-0c77248.md  20260630-1219.md  20260701-882c5b8.md  20260701-ef5dcd3.md  README.md  kaizen-20260623-0703.md
lark-rs/examples/: json_parser.rs  profile_parse.rs  span_alloc.rs  spike_floor.rs  wild_build_cost.rs
lark-rs/lark_h/: Cargo.toml  build.rs  lark.h
lark-rs/lark_h/csrc/: smoke.c
lark-rs/lark_h/src/: lib.rs
lark-rs/lark_h/tests/: c_smoke.rs  smoke.c
lark-rs/lark_proc/: Cargo.toml
lark-rs/lark_proc/src/: lib.rs
lark-rs/lark_proc/tests/: compile_fail.rs  include_lark.rs
lark-rs/python/: .gitignore  Cargo.toml  README.md  lark_rs.pyi  pyproject.toml
lark-rs/python/lark_rs/: __init__.py  __init__.pyi  _lark_rs.pyi  _types.py  _types.pyi
lark-rs/python/src/: lib.rs
lark-rs/python/tests/: test_roundtrip.py
lark-rs/scripts/: check-fast.sh  check.sh
lark-rs/site/: 404.html  index.html
lark-rs/site/assets/: site.css  site.js
lark-rs/site/method/: index.html
lark-rs/src/: collision.rs  error.rs  lexer.rs  lib.rs  lookaround.rs  perf.rs  postlex.rs  reconstruct.rs  standalone.rs  tree.rs
lark-rs/src/grammar/: analysis.rs  intern.rs  loader.rs  mod.rs  rule.rs  symbol.rs  terminal.rs
lark-rs/src/grammars/: common.lark  lark.lark  python.lark  unicode.lark
lark-rs/src/lexer/: collision.rs  dfa.rs  dynamic.rs  fence.rs  guard.rs  mod.rs  pattern.rs  plan.rs  route.rs  scanner.rs  tests.rs
lark-rs/src/lookaround/: classify.rs  lower.rs  matcher.rs  mod.rs
lark-rs/src/parsers/: cyk.rs  earley.rs  interactive.rs  lalr.rs  mod.rs  span_tree.rs  token_source.rs  tree_builder.rs
lark-rs/src/standalone/: mod.rs  runtime.rs
lark-rs/tests/: test_bounty_findings.rs  test_bounty_findings_h2.rs  test_bounty_findings_h3.rs  test_bounty_findings_h4.rs  test_bounty_findings_h5.rs  test_bounty_findings_h6.rs  test_bounty_findings_h7.rs  test_bounty_findings_literal_brace.rs  test_child_vec_scaling.rs  test_common.rs  test_compliance.rs  test_construct_errors.rs  test_contextual_lexer_follow_union.rs  test_cyk_compliance.rs  test_cyk_oracle.rs  test_cyk_scaling.rs  test_earley_compliance.rs  test_earley_dynamic.rs  test_earley_dynamic_compliance.rs  test_earley_oracle.rs  test_earley_parity.rs  test_earley_recognizer.rs  test_earley_scaling.rs  test_earley_stack.rs  test_ebnf_sharing.rs  test_empty_quantifier_447.rs  test_escapes_and_filtering.rs  test_fuzz_corpus.rs  test_g_regex_flags.rs  test_grammar_build_scaling.rs  test_imports.rs  test_indenter.rs  test_indenter_recovery.rs  test_interactive.rs  test_json_corpus.rs  test_known_gaps.rs  test_lalr_core.rs  test_lalr_table_scaling.rs  test_lexer_dfa_build_scaling.rs  test_lexer_scaling.rs  (+40 more)
lark-rs/tests/common/: lowering.rs  mod.rs
lark-rs/tools/: bench_compare.py  bench_wild_python.py  diffcheck.py  extract_lark_compliance.py  fuzz_differential.py  generate_event_stream_oracle.py  generate_oracles.py  generate_transformer_oracles.py  generate_wild_oracles.py  oracle_contradictions.json
lark-rs/wasm/: .gitignore  Cargo.toml  README.md  package-lock.json  package.json
(+317 files in other folders)
