[package]
name = "lark-rs"
version = "0.1.0"
edition = "2021"
description = "A Rust implementation of the Lark parsing toolkit"
license = "MIT"
repository = "https://github.com/lark-parser/lark"

[features]
# Deterministic work counters for the profile-first perf discipline (#56). Off by
# default so the normal build and the hot parse path carry zero overhead; turn on
# with `--features perf-counters` to read `lark_rs::perf` (the noise-free
# super-linearity regression net, `tests/test_earley_scaling.rs`).
perf-counters = []

[dependencies]
regex = "1.10"
indexmap = "2"
thiserror = "1"
smallvec = "1"

[dev-dependencies]
pretty_assertions = "1"
serde_json = "1"

[[example]]
name = "json_parser"
path = "examples/json_parser.rs"

# Recorded-trend perf baseline (LALR), not a CI gate. `harness = false` runs the
# file's own `main()` directly, so no benchmarking crate is needed. Invoke with
# `cargo bench --bench parse`; see benches/parse.rs.
[[bench]]
name = "parse"
path = "benches/parse.rs"
harness = false

# Cross-engine comparison (lark-rs vs Python Lark) over JSON / Python / SQL
# workloads (#50). Shells out to benches/vs_python_lark.py for the Python side and
# prints the per-workload speedup. Recorded trend, not a CI gate — see BENCH.md.
[[bench]]
name = "vs_python_lark"
path = "benches/vs_python_lark.rs"
harness = false

[profile.release]
opt-level = 3
lto = true
