[package]
name = "lark-rs"
version = "0.1.0"
edition = "2021"
description = "A Rust implementation of the Lark parsing toolkit"
license = "MIT"
repository = "https://github.com/lark-parser/lark"

# lark-rs is the workspace root and a member. Sibling members are the C-API crate
# (`lark_h`, issue #48) and the compile-time `include_lark!` proc-macro
# (`lark_proc`, issue #49); keeping them here means the CI `cargo test --all` /
# `cargo fmt --all` run from this directory cover all three without any extra step.
#
# `python/` (the PyO3 binding) is deliberately NOT a member: it is a pyo3
# `extension-module` cdylib built by `maturin` in its own CI job, and pulling it
# into `cargo test --all` would force a Python link on every build. It lives inside
# this directory, so it must be excluded explicitly — otherwise cargo refuses to
# operate on it standalone ("believes it's in a workspace when it's not").
[workspace]
members = ["lark_h", "lark_proc"]
exclude = ["python"]

[features]
# Deterministic work counters for the profile-first perf discipline (#56). Off by
# default so the normal build and the hot parse path carry zero overhead; turn on
# with `--features perf-counters` to read `lark_rs::perf` (the noise-free
# super-linearity regression net, `tests/test_earley_scaling.rs`).
perf-counters = []

[dependencies]
regex = "1.10"
# Backtracking-regex overlay for the handful of bundled-grammar terminals that use
# lookaround (lookahead/lookbehind), which the linear-time `regex` crate cannot
# compile (issue #40). Only lookaround-bearing terminals route here; every other
# terminal stays on the fast combined `regex` scanner. Because `regex` is a subset,
# a pattern that compiles with `regex` is never handed to `fancy-regex`.
fancy-regex = "0.18"
# Dense-DFA support for the strict-mode regex-collision check (issue #35): the
# `regex` crate has no intersection/emptiness test, so we drop to its automata
# layer and run a product construction over two terminals' DFAs.
regex-automata = "0.4"
indexmap = "2"
thiserror = "1"
smallvec = "1"

[dev-dependencies]
pretty_assertions = "1"
serde_json = "1"
# The standalone-parser round-trip test (`tests/test_standalone.rs`) `include!`s a
# generated parser, which depends only on `regex` — so the test crate needs it too.
regex = "1.10"
# The lookaround-elimination match-length equivalence proof (`tests/test_lookaround.rs`)
# runs each *original* lookaround terminal on `fancy-regex` and its lookaround-free
# *rewrite* on `regex`, then asserts the two anchored matched-prefix functions agree
# over a generated corpus. The test crate therefore needs the backtracking engine too.
fancy-regex = "0.18"

[[example]]
name = "json_parser"
path = "examples/json_parser.rs"

# Recorded-trend perf baseline (LALR), not a CI gate. `harness = false` runs the
# file's own `main()` directly, so no benchmarking crate is needed. Invoke with
# `cargo bench --bench parse`; see benches/parse.rs.
[[bench]]
name = "parse"
path = "benches/parse.rs"
harness = false

# Cross-engine comparison (lark-rs vs Python Lark) over JSON / Python / SQL
# workloads (#50). Shells out to benches/vs_python_lark.py for the Python side and
# prints the per-workload speedup. Recorded trend, not a CI gate — see BENCH.md.
[[bench]]
name = "vs_python_lark"
path = "benches/vs_python_lark.rs"
harness = false

# Two-tier ReDoS cost of the lookaround terminals routed to `fancy-regex` (#40):
# the benign linear `python.STRING` vs the pathological super-linear `lark.REGEXP`.
# The artifact for the lookaround-rewrite follow-up. Recorded trend, not a CI gate.
[[bench]]
name = "redos"
path = "benches/redos.rs"
harness = false

[profile.release]
opt-level = 3
lto = true
