[package]
name = "lark-rs"
version = "0.1.0"
edition = "2021"
description = "A Rust implementation of the Lark parsing toolkit"
license = "MIT"
repository = "https://github.com/lark-parser/lark"

# lark-rs is the workspace root and a member. Sibling members are the C-API crate
# (`lark_h`, issue #48) and the compile-time `include_lark!` proc-macro
# (`lark_proc`, issue #49); keeping them here means the CI `cargo test --all` /
# `cargo fmt --all` run from this directory cover all three without any extra step.
#
# `python/` (the PyO3 binding) is deliberately NOT a member: it is a pyo3
# `extension-module` cdylib built by `maturin` in its own CI job, and pulling it
# into `cargo test --all` would force a Python link on every build. It lives inside
# this directory, so it must be excluded explicitly — otherwise cargo refuses to
# operate on it standalone ("believes it's in a workspace when it's not").
[workspace]
members = ["lark_h", "lark_proc"]
exclude = ["python"]

[features]
# Deterministic work counters for the profile-first perf discipline (#56). Off by
# default so the normal build and the hot parse path carry zero overhead; turn on
# with `--features perf-counters` to read `lark_rs::perf` (the noise-free
# super-linearity regression net, `tests/test_earley_scaling.rs`).
perf-counters = []
# TEST-ONLY (not a user escape hatch): re-enables the `Regex` reference backend's
# historical `fancy-regex` side-probes so the whole-lexer differential
# (tests/test_scanner_differential.rs) has an independent oracle. Default OFF; the
# refusal policy (docs/LOOKAROUND_SCOPE.md) is identical either way — the feature
# only changes what the *reference* Scanner can host, never what a grammar build
# accepts.
fancy-oracle = ["dep:fancy-regex"]

[dependencies]
regex = "1.10"
# `fancy-regex` is **NOT a runtime dependency** (L4, `docs/LEXER_DFA_PLAN.md`): every
# terminal either compiles on the linear `regex` crate, lowers into the
# `regex-automata` DFA, or fails the grammar build with the categorized scope error
# (`docs/LOOKAROUND_SCOPE.md`). It remains in two test-only roles: a [dev-dependencies]
# per-pattern oracle (equivalence/proof tests), and — behind the default-OFF
# `fancy-oracle` feature below — the historical fancy side-probes of the `Regex`
# reference backend, so the whole-lexer differential keeps an independent reference.
# It is not a user escape hatch; default builds contain zero fancy-regex code
# (`cargo tree -e normal` shows no fancy-regex), and grammar-build outcomes are
# identical with and without the feature.
fancy-regex = { version = "0.18", optional = true }
# Dense-DFA support for the strict-mode regex-collision check (issue #35): the
# `regex` crate has no intersection/emptiness test, so we drop to its automata
# layer and run a product construction over two terminals' DFAs.
regex-automata = "0.4"
indexmap = "2"
thiserror = "1"
smallvec = "1"

[dev-dependencies]
pretty_assertions = "1"
serde_json = "1"
# The standalone-parser round-trip test (`tests/test_standalone.rs`) `include!`s a
# generated parser, which depends only on `regex` — so the test crate needs it too.
regex = "1.10"
# The lookaround-elimination match-length equivalence proof (`tests/test_lookaround.rs`)
# runs each *original* lookaround terminal on `fancy-regex` and its lookaround-free
# *rewrite* on `regex`, then asserts the two anchored matched-prefix functions agree
# over a generated corpus. The test crate therefore needs the backtracking engine too.
fancy-regex = "0.18"
# The L2 Route-1 DFA-equivalence proof (`tests/test_lowering_proof.rs`) reads the
# lowered terminal's byte-equivalence classes and state count off a dense DFA to
# derive a complete (Myhill-Nerode-bounded) enumeration alphabet and length bound.
regex-automata = "0.4"

[[example]]
name = "json_parser"
path = "examples/json_parser.rs"

# The L0 whole-lexer differential needs the fancy-oracle reference backend (the
# `Regex` backend's historical fancy side-probes) — meaningless against the lowered
# probes, which share the machinery under test. CI runs it via
# `cargo test -p lark-rs --features fancy-oracle` (plain `cargo test` skips it).
[[test]]
name = "test_scanner_differential"
required-features = ["fancy-oracle"]

# Recorded-trend perf baseline (LALR), not a CI gate. `harness = false` runs the
# file's own `main()` directly, so no benchmarking crate is needed. Invoke with
# `cargo bench --bench parse`; see benches/parse.rs.
[[bench]]
name = "parse"
path = "benches/parse.rs"
harness = false

# Cross-engine comparison (lark-rs vs Python Lark) over JSON / Python / SQL
# workloads (#50). Shells out to benches/vs_python_lark.py for the Python side and
# prints the per-workload speedup. Recorded trend, not a CI gate — see BENCH.md.
[[bench]]
name = "vs_python_lark"
path = "benches/vs_python_lark.rs"
harness = false

# Lexing throughput: the regex-crate Scanner vs the regex-automata DfaScanner
# (docs/LEXER_DFA_PLAN.md, phase L1). Times the lexer in isolation under each
# backend over JSON / expr / Python workloads and prints the dfa/regex ratio.
# Recorded trend, not a CI gate — see BENCH.md. Requires the fancy-oracle feature
# so the Regex backend it measures is the historical fancy-probe reference.
[[bench]]
name = "lex_backends"
path = "benches/lex_backends.rs"
harness = false
required-features = ["fancy-oracle"]

# Scan-cost characterization of the (now fully LOWERED) bundled lookaround
# terminals — historically the two-tier fancy-regex ReDoS artifact (#40); today it
# pins that the lowered DFA path stays linear. Recorded trend, not a CI gate.
[[bench]]
name = "redos"
path = "benches/redos.rs"
harness = false

[profile.release]
opt-level = 3
lto = true
