[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "lark-rs"
description = "A Rust-powered, drop-in speedup for the Lark parsing toolkit"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
keywords = ["parser", "parsing", "earley", "lalr", "grammar", "lark", "rust"]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development :: Compilers",
    "Topic :: Text Processing :: General",
]
dynamic = ["version"]

[project.urls]
Repository = "https://github.com/lark-parser/lark"

# Own pytest config so collection doesn't inherit the repo-root config (which
# sets `python_files = "__main__.py"` for the Python-Lark test suite). This also
# makes this directory pytest's rootdir.
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.maturin]
# Mixed Rust/Python layout: the importable package is `lark_rs` (pure-Python
# `__init__.py` + `_types.py` under `lark_rs/`), and the compiled engine is the
# extension submodule `lark_rs._lark_rs`. `Token` (a `str` subclass) and `Meta`
# must be pure Python because PyO3 cannot subclass `str` under `abi3` (ADR-0036).
manifest-path = "Cargo.toml"
python-source = "."
module-name = "lark_rs._lark_rs"
# Ship `py.typed` and the per-module stubs (`lark_rs/__init__.pyi`,
# `lark_rs/_lark_rs.pyi`) so editors and type checkers see the API surface.
