[package]
name = "lark-rs-wasm"
version = "0.1.0"
edition = "2021"
description = "WebAssembly bindings for lark-rs — the Lark parsing toolkit for browser and Node.js"
license = "MIT"
repository = "https://github.com/lark-parser/lark"

# The compiled artifact is a WASM module packaged by `wasm-pack` into an npm
# package (`pkg/`). `rlib` is kept so `cargo check`/`cargo test` work on the
# host target too.
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# The core engine lives one directory up. The binding is a thin adapter that
# translates a JS options object to `LarkOptions` and serializes the Rust
# `Tree`/`Token` types to JS values — all parsing logic stays in the shared
# crate. Imported as `lark_core`, mirroring the PyO3 binding.
lark_core = { path = "..", package = "lark-rs" }
wasm-bindgen = "0.2"
js-sys = "0.3"
serde_json = "1"

[profile.release]
opt-level = 3
lto = true
